--- a/javaproject/pom.xml
+++ b/javaproject/pom.xml
@@ -8,6 +8,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <exec.mainClass>deu.javaproject.Javaproject</exec.mainClass>
+        <exec.mainClass>deu.javaproject.User</exec.mainClass>
     </properties>
 </project>
